<resources>
    <string name="app_name">SchoolSuggestions</string>
    <string name="login_text">로그인</string>
    <string name="registration_text">계정 생성하기</string>
    <string name="student_text">학생</string>
    <string name="teacher_text">선생님</string>
    <string name="name_hint_text">이름</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">비밀번호</string>
    <string name="grade_hint_text">학년</string>
    <string name="class_hint_text">반</string>
    <string name="student_number_hint_text">번호</string>
    <string name="code_hint_text">코드</string>
    <string name="teacher_code">teachercode</string>
    <string name="cancel_text">CANCEL</string>
    <string name="submit_text">SUBMIT</string>
    <string name="connection_failure_message">네트워크 연결이 불안정 합니다. 다시 시도해주세요.</string>
    <string name="success_register_message">회원가입에 성공하였습니다.</string>
    <string name="code_incorrect_message">코드 인증에 실패하였습니다.</string>
    <string name="success_login_message">로그인에 성공하였습니다.</string>
    <string name="fail_login_message">로그인에 실패하였습니다. 아이디 혹은 비밀번호를 확인해주세요.</string>
    <string name="title_column_name">제목</string>
    <string name="agreement_column_name">찬성:반대</string>
    <string name="feedback_column_name">대답</string>
    <string name="registerIssueBtn_post">안건 등록</string>
    <string name="registerPostBtn_post">글 쓰기</string>
    <string name="pageText_postRegister">학생회의 의견보내기</string>
    <string name="content_hint_postRegister">내용을 입력해 주세요</string>
    <string name="submitBtnText_postRegister">보내기</string>
    <string name="issueTitleText_postList">안건을 작성해 주세요</string>
    <string name="fail_getIssue_message">안건 가져오기에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="success_writeIssue_message">안건 등록에 성공했습니다.</string>
    <string name="fail_writeIssue_message">안건 등록에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="fail_getPostList_message">의견 가져오기에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="success_writePost_message">의견 등록에 성공했습니다.</string>
    <string name="fail_writePost_message">의견 등록에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="feedback_hint_postView">피드백이 아직 없습니다.</string>
    <string name="agree_text_postView">찬성</string>
    <string name="disagree_text_postView">반대</string>
</resources>
