<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".RegisterActivity">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registration_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40sp"
                android:textStyle="bold"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <TextView
                    android:id="@+id/studentText_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/student_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"/>

            <TextView
                    android:id="@+id/teacherText_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:text="@string/teacher_text"
                    android:textColor="@color/colorGray"
                    android:textSize="30sp"/>
        </RelativeLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_marginTop="30dp">

            <LinearLayout
                    android:id="@+id/studentInfoLayout_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                <EditText
                        android:id="@+id/gradeEditText_register"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:background="@drawable/rounded_border"
                        android:gravity="center"
                        android:hint="@string/grade_hint_text"/>

                <EditText
                        android:id="@+id/classEditText_register"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_border"
                        android:gravity="center"
                        android:hint="@string/class_hint_text"/>

                <EditText
                        android:id="@+id/studentNumEditText_register"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_border"
                        android:gravity="center"
                        android:hint="@string/student_number_hint_text"/>
            </LinearLayout>

            <EditText
                    android:id="@+id/codeEditText_register"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/code_hint_text"
                    android:inputType="text"
                    android:padding="10dp"
                    android:privateImeOptions="defaultInputmode=english"
                    android:textColorHint="@color/colorPrimary"
                    android:visibility="gone"/>
        </LinearLayout>

        <EditText
                android:id="@+id/nameEditText_register"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name_hint_text"
                android:inputType="text"
                android:padding="10dp"
                android:privateImeOptions="defaultInputmode=korean"
                android:textColorHint="@color/colorPrimary"/>

        <EditText
                android:id="@+id/emailEditText_register"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint_text"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:privateImeOptions="defaultInputmode=english"
                android:textColorHint="@color/colorPrimary"/>

        <EditText
                android:id="@+id/passwordEditText_register"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:privateImeOptions="defaultInputmode=english"
                android:textColorHint="@color/colorPrimary"/>

        <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

            <Button
                    android:id="@+id/cancelButton_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_text"
                    android:textColor="@color/colorPrimary"/>

            <Button
                    android:id="@+id/submitButton_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/submit_text"
                    android:textColor="@color/colorPrimary"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>