<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostRegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pageText_postRegister"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/issueText_postRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:text="@string/issueTitleText_postList"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/titleEditText_postRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_column_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/contentEditText_postRegister"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_border"
        android:gravity="top"
        android:hint="@string/content_hint_postRegister"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColorHint="@color/colorPrimary" />

    <Button
        android:id="@+id/submitBtn_postRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorLightGray"
        android:text="@string/submitBtnText_postRegister"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</LinearLayout>