<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EmailText_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email_hint_text"
            android:inputType="text"
            android:padding="10dp"
            android:privateImeOptions="defaultInputmode=english"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/PasswordText_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint_text"
            android:inputType="text"
            android:padding="10dp"
            android:privateImeOptions="defaultInputmode=english"
            android:textColorHint="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/cancelButton_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text" />

            <Button
                android:id="@+id/submitButton_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/submit_text" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>