<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="5dp"
              android:layout_marginBottom="5dp">

    <TextView
            android:id="@+id/titleText_postList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/title_column_name"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"/>

    <TextView
            android:id="@+id/agreementText_postList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/agreement_column_name"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"/>

    <TextView
            android:id="@+id/feedbackText_postList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/feedback_column_name"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"/>
</LinearLayout>