<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".PostListActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="학생회의 의견"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="30dp"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/issueText_postList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_border"
                android:padding="10dp"
                android:text="@string/issueTitleText_postList"
                android:textSize="25sp"/>

        <EditText
                android:id="@+id/issueEditText_postList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_border"
                android:hint="@string/issueTitleText_postList"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="25sp"
                android:visibility="gone"/>

        <Button
                android:id="@+id/registerBtn_postList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/issueText_postList"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/registerPostBtn_post"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@color/colorLightGray"
                android:gravity="center"
                android:text="@string/title_column_name"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="2"
                android:background="@color/colorLightGray"
                android:gravity="center"
                android:text="@string/agreement_column_name"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@color/colorLightGray"
                android:gravity="center"
                android:text="@string/feedback_column_name"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"/>
    </LinearLayout>

    <ListView
            android:id="@+id/listView_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"/>
</LinearLayout>